--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=3000
 spring.web.resources.static-locations[0]=file:src/main/resources/static
 
 #DB URL
-spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase
+spring.datasource.url=jdbc:mysql://localhost:3306/my_database
 #identifiers useed for auth on MySQL
 spring.datasource.username=root
 spring.datasource.password=
