--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=MiniProject
 
-server.port=3000
+server.port=3006
 spring.web.resources.static-locations[0]=file:src/main/resources/static
 
 #DB URL
@@ -15,6 +15,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.security.enabled=false
 
 
 
