--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,28 @@
+############# App-Info ##################
 spring.application.name=MiniProject
-
 server.port=3006
-spring.web.resources.static-locations[0]=file:src/main/resources/static
-
-#DB URL
-spring.datasource.url=jdbc:mysql://localhost:3306/my_database
-#identifiers useed for auth on MySQL
+####### Data-Source Properties #######
+# Database connection URL.
+spring.datasource.url=jdbc:mysql://localhost:3306/my_project_database
+# Declaration of identifiers used for authentication on MySQL
 spring.datasource.username=root
 spring.datasource.password=
-
+# switches the feature on and off and is vendor independent
 spring.jpa.generate-ddl=true
-#(create, create-drop,validate,update)
+# Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
-
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.security.enabled=false
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
+# Specifies the path to the private key used for signing the JWT tokens
+jwt.private.key=classpath:app.key
 
+# Specifies the path to the public key used for verifying the JWT tokens
+jwt.public.key=classpath:app.pub
 
+# JWT Validity duration in seconds (1 hour)
+jwt.expiration=3600 
 
+# Name of the cookie that will store the JWT token
+jwt.cookie-name=jwt-cookie
