--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=MiniProject
 server.port=3006
 ####### Data-Source Properties #######
 # Database connection URL.
-spring.datasource.url=jdbc:mysql://localhost:3306/project_database
+spring.datasource.url=jdbc:mysql://localhost:3306/project-database
 # Declaration of identifiers used for authentication on MySQL
 spring.datasource.username=root
 spring.datasource.password=
