--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 # Specifies the path to the private key used for signing the JWT tokens
-jwt.private.key=classpath:app.key
+jwt.private.key=classpath:app.pri
 
 # Specifies the path to the public key used for verifying the JWT tokens
 jwt.public.key=classpath:app.pub
