--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 ############# App-Info ##################
 spring.application.name=MiniProject
-server.port=3006
+server.port=8085
 ####### Data-Source Properties #######
 # Database connection URL.
-spring.datasource.url=jdbc:mysql://localhost:3306/project-database
+spring.datasource.url=jdbc:mysql://localhost:3306/elife-db-project
 # Declaration of identifiers used for authentication on MySQL
 spring.datasource.username=root
 spring.datasource.password=
